# alpaca-py

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dalton code 2  Dockerfile  LICENSE  Makefile  Procfile  README.md  advanced_orders.py  alpaca_client.py  app.py  cloudbuild.yaml  gen_openapi.py  jimbolocks  openapi.json  openapi.yaml  pyproject.toml  requirements.txt  test.py
.allium/: broker-client.allium  market-data-client.allium  trading-client.allium
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature-request.yml  question.yaml
.github/workflows/: allium-check.yml  allium-drift.yml  ci.yaml  publish-pypi.yaml  stale.yml  tests.yaml
.well-known/: ai-plugin.json
alpaca/: __init__.py
alpaca/broker/: __init__.py  client.py  constants.py  enums.py  models.py  requests.py
alpaca/common/: __init__.py  constants.py  enums.py  exceptions.py  models.py  requests.py  rest.py  time.py  types.py  utils.py  websocket.py
alpaca/data/: __init__.py  clients.py  enums.py  historical.py  live.py  mappings.py  models.py  requests.py  stream_clients.py  time.py  timeframe.py
alpaca/trading/: __init__.py  client.py  enums.py  models.py  requests.py  stream.py
docs/: 00-router-overlay.md  01-unified-instruction-set.md  02-developer-guide.md  02-strategy-signals.md  03-finrl-integration.md  03-strategy-playbook.md  04-live-mode-checklist.md  04-market-data-finnhub.md  05-journal-schema.md  05-order-execution-alpaca.md  06-signal-orchestration.md  07-protection-daemon.md  08-finnhub-quick-reference.md  alpha-classifier-contract.md  alpha-router-overlay.md  alpha-tone-ops-addendum-v6.md  broker.rst  conf.py  data.rst  getting_started.rst  index.rst  introduction.rst  market_data.rst  migration.rst  trade.rst  trading.rst
docs/_templates/: base.html  page.html
docs/alpha_latest/: alpaca_order_rules.json  classifier_gate.md  classifier_schema.json  earnings_policy.md  error_taxonomy.md  finrl_endpoints.md  finrl_errors.md  finrl_playbook.md  finrl_schemas.json  finrl_tests.jsonl  journal_entry.schema.json  market_events.md  move_explanation.schema.json  order_validation.schema.json  preflight_check.schema.json  quote_normalization.md  route_decision.schema.json  router_map.json  sessions_holidays.md  strategy_reference.md  trade_preview.schema.json  watchlist_entry.schema.json  watchlist_workflow.md
docs/api_reference/: broker_api.rst  broker_client.rst  broker_enums.rst  broker_models.rst  common.rst  data_api.rst  data_clients.rst  data_models.rst  index.rst  trade_api.rst  trading_api.rst
docs/archives/: 00 - custom gpt instrucrions.md  01-unified-instruction-set.md  02-strategy-signals.md  03-finrl-integration.md  04-market-data-finnhub.md  05-order-execution-alpaca.md  06-signal-orchestration.md  07-protection-daemon.md  08-finnhub-quick-reference.md
examples/: README.md  crypto-trading-basic.ipynb  options-trading-basic.ipynb  options-trading-mleg.ipynb  stocks-trading-basic.ipynb
examples/Crypto/: README.md
examples/Options/: README.md  options-bear-put-spread.ipynb  options-bull-call-spread.ipynb  options-calendar-spread.ipynb  options-delta-hedging.ipynb  options-gamma-scalping.ipynb  options-iron-condor.ipynb  options-long-straddle.ipynb  options-polygon-alpaca.ipynb  options-wheel-strategy.ipynb  options-zero-dte.ipynb
examples/crypto/: README.md  (+3 more)
tests/: conftest.py  test_alpaca.py  test_alpaca_py.py  test_streaming_reconnect_issues.py  test_utils.py
(+234 files in other folders)
