[tool.poetry]
name = "alpaca-py"
version = "0.8.2"
description = "The Official Python SDK for Alpaca APIs"
authors = [
    "Rahul Chowdhury <rahul.chowdhury@alpaca.markets>",
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/alpacahq/alpaca-py"
documentation = "https://alpaca.markets/docs/python-sdk/"
packages = [
    { include = "alpaca" }
]
include = [ "alpaca/py.typed" ]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "2.30.0"
pydantic = "^1.9.0"
pandas = "^1.3.5"
msgpack = "^1.0.3"
websockets = "^10.2"
sseclient-py = "^1.7.2"


[tool.poetry.dev-dependencies]
pytest = "^7.1"
requests-mock = "^1.9.3"
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
furo = "^2022.2.14"
Sphinx = "^5.0.1"
sphinx-copybutton = "^0.5.0"
enum-tools = "^0.9.0"
sphinx-toolbox = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
