[tool.poetry]
name = "alpaca-py"
# placeholder for poetry-dynamic-versioning
version = "0.0.0"
description = "The Official Python SDK for Alpaca APIs"
authors = [
    "Rahul Chowdhury <rahul.chowdhury@alpaca.markets>",
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/alpacahq/alpaca-py"
documentation = "https://alpaca.markets/docs/python-sdk/"
packages = [
    { include = "alpaca" }
]
include = [ "alpaca/py.typed" ]

[tool.poetry.dependencies]
python = "^3.10.0"
requests = "^2.30.0"
pydantic = "^2.0.3"
pandas = ">=1.5.3"
msgpack = "^1.0.3"
websockets = ">=10.4"
sseclient-py = "^1.7.2"
pytz = ">=2020.1"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.1,<9.0"
pytest-asyncio = "^0.23.7"
requests-mock = "^1.9.3"
black = ">=24.3,<27.0"
isort = ">=5.10.1,<9.0.0"
pre-commit = "^2.17.0"
furo = "^2022.2.14"
Sphinx = "^5.0.1"
sphinx-copybutton = "^0.5.0"
enum-tools = "^0.9.0"
sphinx-toolbox = "^3.1.2"

[build-system]
requires = ["poetry-core>=2.4.1", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
# Only run SDK tests here; example projects have their own test setups
testpaths = ["tests"]

[tool.poetry-dynamic-versioning]
enable=true

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "alpaca" }
]
